History
=======

Version 0.8.14 - Unreleased
---------------------------

- Follow best practice and decouple the profile metadata from the software
  version in setup.py.
  [hannosch]

- Added a z3c.autoinclude entry point to mark this as a Plone add-on.
  [hannosch]

- Added our own overrides.zcml to load the one from plone.z3cform. You cannot
  load overrides in the configure stage.
  [hannosch]

- Add log on ATTopic Patch.
  [toutpt]

- Update French translations.
  [toutpt]

- Fix i18n pot file by escape quotes.
  [toutpt]

- Extended the HTML composer so that you can select which composer template
  to use. You register new composer templates by instantiating a template
  somewhere in your code:

    >>> mytemplate = ViewPageTemplateFile('browser/composer-html.pt')

  and registering that in ZCML:

    <utility component=".module.mytemplate"
           name="My Custom Template"
           provides="collective.dancing.interfaces.IHTMLComposerTemplate" />

  [regebro]


Version 0.8.13 - 2009-10-19
---------------------------

- The attribute 'subscribeable' now defaults to False on newly created
  channels. This means newly created channels will not show up on my-subscriptions
  before they are made subscribeable from the channels configuration page.
  [tmog]

- Disabled stoneagehtml style attributes blacklist since it stripped
  out font-familiy from the styles added to a channel which confused 
  several users. This fixes http://tinyurl.com/ygmhv7a
  Unfortunately its not possible to specify a custom 
  black list like stoneagehtml.compactify(html, filter_tags=['position'...])
  since the stoneagehtml dosen't support that yet - http://tinyurl.com/ykwca4p.
  [pelle]

- Fixed bug that caused the "Include collector items" option to
  be ignored (i.e. always on) in "Send as newsletter" previews.
  Also, there is now a default cue for the dummy preview subscriber.
  The cue is always "one week ago".
  [tmog]

Version 0.8.12 - 2009-09-15
---------------------------